```mermaid
erDiagram
    USER {
        string id PK
        string first_name
        string last_name
        string email UNIQUE
        string password
        boolean is_admin
        string created_at
        string updated_at
    }

    PLACE {
        string id PK
        string title
        string description
        float price
        float latitude
        float longitude
        string owner_id FK
        string created_at
        string updated_at
    }

    REVIEW {
        string id PK
        string text
        int rating
        string place_id FK
        string user_id FK
        string created_at
        string updated_at
    }

    AMENITY {
        string id PK
        string name
        string created_at
        string updated_at
    }

    PLACE_AMENITY {
        string place_id PK FK
        string amenity_id PK FK
    }

    USER ||--o{ PLACE : owns
    USER ||--o{ REVIEW : writes
    PLACE ||--o{ REVIEW : has
    PLACE ||--o{ PLACE_AMENITY : includes
    AMENITY ||--o{ PLACE_AMENITY : available_in
